@@ -6,8 +6,6 @@
 
 static const char fileIdent[] = "$Id$";
 
-Code_t ZResetAuthentication();
-
 int owl_zwrite_create_and_send_from_line(char *cmd, char *msg) {
   owl_zwrite z;
   int rv;
@@ -226,8 +224,6 @@ void owl_zwrite_send_message(owl_zwrite *z, char *msg) {
     sprintf(to, "@%s", z->realm);
     send_zephyr(z->opcode, z->zsig, z->class, z->inst, to, msg);
   }
-
-  ZResetAuthentication();
 }
 
 char *owl_zwrite_get_class(owl_zwrite *z) {
